--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 				<div class="container">
 					<div class="card card-soft p-4 p-lg-5 text-center">
 						<p class="lead mb-2">Sometimes, all we need is the right support.
-						Calm, practical, judgment-free support&mdash;from first latch to NICU homecoming and beyond. A strong support system <em>makes things happen</em>.</p>
+						Calm, practical, judgment-free support&mdash;from first latch to homecoming and beyond. A strong support system <em>makes things happen</em>.</p>
 					</div>
 				</div>
 </section>
@@ -320,7 +320,7 @@
 								<ul class="list-unstyled small mb-0">
 									<li>Registered Nurse (RN)</li>
 									<li>International Board Certified Lactation Consultant (IBCLC)</li>
-									<li>Evidence-based, trauma-informed, infant-centered support</li>
+									<li>Evidence-based, trauma-informed, family-centered support</li>
 								</ul>
 							</div>
 							<div class="about-card__section">
@@ -414,7 +414,7 @@
 							>
 								<div class="accordion-body">
 									Absolutely. I support families through NICU discharge,
-									establishing supply, and practical pumping schedules.
+									establishing latching, supply, and practical pumping solutions.
 								</div>
 							</div>
 						</div>
